--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header-->
     <div class="jumbotron">
        <div class="container">
-           <center><h1>The Kickass Gif App</h1></center>
+           <center><h1>Gif it Up!</h1></center>
        
 
 <br>
